--- a/src/main/resources/META-INF/resources/scss/base/_header.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_header.scss
@@ -11,7 +11,7 @@
     margin-bottom: 20px;
   }
   #wordmark {
-    background: url("../../../images/FeU_Hochschulbibliographie.png") no-repeat;
+    background: url("../../../images/FeU_Hochschulbibliographie.svg") no-repeat;
     height: 50px;
     background-size: contain;
   }
