--- a/src/main/resources/META-INF/resources/scss/base/_navigation.scss
+++ b/src/main/resources/META-INF/resources/scss/base/_navigation.scss
@@ -24,9 +24,6 @@
   li.nav-item.active > a {
     color: white;
   }
-  .nav-pills > .nav-item {
-    //color: white;
-  }
   .navbar-nav a {
     color: black;
     font-size: 18px;
@@ -68,6 +65,11 @@
     color: #212529;
     font-size: 16px;
   }
+  .hgn-user-orcid {
+    position: absolute;
+    left: -0.5rem;
+    top: 0.25rem;
+  }
 
 // breadcrumb
   #breadcrumbWrapper {
@@ -97,7 +99,7 @@
 // basketinfo
   #basketWrapper {
     a {
-      color: white;
+      color: $primary;
       font-size: 14px;
       font-family: 'Roboto Condensed', Arial, sans-serif;
     }
